  * Use Python 3 examples in the manpage, thanks Louis-Philippe Véronneau.
  * Handle dist-info extra sections the same way we do for requirements.txt.
    (closes: 998374)
  * Add support for environment markers.
    (closes: 815654, 834133, 922468, 978686)
  * Expand on --depends-section=SECTION and similar in dh_python3(1), and
    mention multiple use.

 -- Stefano Rivera <stefanor@debian.org>  Sun, 21 Nov 2021 09:32:04 -0400

dh-python (5.20211114) unstable; urgency=medium

  * Avoid the dependency on python-ply for testpb03, this was removed in
    Ubuntu, already.

 -- Stefano Rivera <stefanor@debian.org>  Sun, 14 Nov 2021 17:41:28 -0800

dh-python (5.20211105) unstable; urgency=medium

  * Add tpb03 - a test covering pybuild building Python 2 and 3 packages.
  * Document pybuild environment variables in pybuild(1) (closes: #997469)
  * pybuild: Only generate --test-* dependencies in the test target.
  * pybuild: Fix tox autodetection, broken since it was renamed from
    python3-tox.
  * pybuild tox plugin: Delete pydistutils.cfg before calling tox, to avoid
    breaking it. Switching keys to underscores in 5.20211022 brought them to
    pip's attention, and it tried to install to /usr. (closes: 997485, 998581)
  * pybuild tox plugin: Use tox --sitepackages to use Debian packages to
    resolve test dependencies (closes: 960048)

 -- Stefano Rivera <stefanor@debian.org>  Fri, 05 Nov 2021 00:44:25 -0700

dh-python (5.20211022.1) unstable; urgency=medium

  * dhpython/debhelper.py: Ignore trailing newlines in debian/control
    (closes: 996995)
  * Add test cases for broken failed debian/control parsing.

 -- Stefano Rivera <stefanor@debian.org>  Fri, 22 Oct 2021 13:13:43 -0700

dh-python (5.20211022) unstable; urgency=medium

  * pybuild distutils plugin: Use underscore separated keys in
    pydistutils.cfg, following setuptools 54.1's deprecation of
    dash-separation.
  * dhpython/debhelper.py: Don't consider two blank lines to be an empty