@@ -4,6 +4,6 @@ name = foo
 [options]
 py_modules = foo
 install_requires =
-    toml
+    tomli
     mock; python_version < '3.1'
     docutils; python_version >= '3.0'
