@@ -2,5 +2,5 @@
 envlist = py39
 
 [testenv]
-deps = toml
+deps = tomli
 commands = python -m unittest discover
